--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,4 +39,6 @@ set(Encrypt_VERSION_MAJOR 1)
 set(Encrypt_VERSION_MINOR 0)
 
 add_subdirectory(src)
+add_subdirectory(examples/encrypt)
+add_subdirectory(examples/decrypt)
 
