--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -29,7 +29,9 @@ SET (HEADERS
 )
 
 include_directories("${SPDLOG_INCLUDE_DIR}")
-include_directories("${OPENSSL_INCLUDE_DIR}")
+if(APPLE)
+  include_directories("${OPENSSL_INCLUDE_DIR}")
+endif()
 
 if(APPLE)
   link_directories("${OPENSSL_LIB_DIR}")
